first round of styling: looks ok, fixes z-index, but I would prefer vertical centering

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
   background: yellow;
   color: chartreuse;
@@ -5,22 +9,75 @@ body {
   font-weight: bold;
   text-align: center;
   font-size: 13vw;
-}
 
-.text-wrapper {
-  position: absolute;
-  top: 50%;
-	left: 0;
-	width: 100%;
-  -ms-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+	display: flex;
+	flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+	/*
+	padding-top: 16vh;
+
+	@media (max-height: 450px) {
+		padding-top: 5vh;
+	}
+	*/
 }
 
 #lemon-canvas {
   position: fixed;
+	z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.login-form {
+	display: inline-block;
+	position: relative;
+	z-index: 2;
+	width: 90vw;
+	max-width: 250px;
+	background: rgba(#000, 0.8);
+	border-radius: 1px;
+	padding: 3vw;
+	line-height: 14px;
+
+	&-input,
+	&-button {
+		float: left;
+		border: none;
+		height: 30px;
+	}
+
+	$input-size: 70%;
+	$margin: 3%;
+
+	&-input {
+		width: $input-size;
+		margin-right: $margin;
+		padding-right: 3%;
+		padding-left: 3%;
+		color: limegreen;
+
+		&:focus {
+			outline: none;
+		}
+	}
+
+	&-button {
+		width: 100% - $input-size - $margin;
+		background-color: fuchsia;
+		color: aqua;
+	}
+
+	&-error {
+		float: left;
+		margin-top: 10px;
+		width: 100%;
+		text-align: center;
+		font-size: 12px;
+		color: red;
+	}
 }
